--- a/cover.css
+++ b/cover.css
@@ -58,6 +58,10 @@ body {
 /*
  * Header
  */
+.masthead {
+    background-color: #ffffff;
+}
+
 .masthead-brand {
     margin-top: 10px;
     margin-bottom: 10px;
