--- a/cover.css
+++ b/cover.css
@@ -59,10 +59,15 @@
 }
 
 /* Links */
-a,
-a:focus,
+a:link {
+    color: #c77966;
+    text-decoration: none;
+}
+
+a:visited,
 a:hover {
     color: #c77966;
+    text-decoration: underline;
 }
 
 /* Custom default button */
@@ -93,6 +98,10 @@ body {
     font-family: "Avenir Next Thin";
     font-size: 32px;
     color: #e3cda4;
+}
+.p-subheading {
+    font-family: "Avenir Next Thin";
+    font-size: 24px;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
