--- a/cover.css
+++ b/cover.css
@@ -27,7 +27,7 @@ body {
     background-color: #2f343b;
 }
 body {
-    font-family: "Lato";
+    font-family: "Open Sans", sans-serif;
     font-weight: 300;
     color: #7e827a;
 }
@@ -38,23 +38,23 @@ body {
 ul,
 li,
 p {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 150%;
 }
 .p-heading {
-    font-family: "Lato";
+    font-family: "Nunito";
     font-size: 32px;
     font-weight: 300;
     color: #e3cda4;
 }
 .p-subheading {
-    font-family: "Lato";
+    font-family: "Nunito";
     font-size: 24px;
     font-weight: 300;
     color: #e3cda4;
 }
 .p-subsubheading {
-    font-family: "Lato";
+    font-family: "Nunito";
     font-size: 18px;
     font-weight: 300;
 }
@@ -126,7 +126,7 @@ p {
 .masthead-nav > .active > a,
 .masthead-nav > .active > a:hover,
 .masthead-nav > .active > a:focus {
-    font-family: "Lato";
+    font-family: "Nunito";
     font-weight: 400;
     color: #7e827a;
     border-bottom-color: #c77966;
